test/files/neg/t1523.check
t1523.scala:4: error: 25 more arguments than can be applied to method bug: (x: Any)Any
  def go() = bug("a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a")
                      ^
one error found
